fix(progress): align bar with text#INFR-6381

--- a/src/progress/styles/progress.scss
+++ b/src/progress/styles/progress.scss
@@ -22,6 +22,7 @@
 .progress,
 .thy-progress {
     display: flex;
+    align-items: center;
     font-size: bootstrap-variables.$progress-font-size;
 }
 
